# rage-riders

./: Cargo.toml
src/: content.rs  game.rs  main.rs  test_one.rs  test_two.rs
src/content/: mod.rs
src/content/maps/: map.rs
src/content/physics/: mod.rs
src/content/vehicles/: car.rs
src/game/maps/: map.rs
src/game/vehicles/: car.rs
src/shaders/: main.wgsl
src/utils/: gpu.rs  mod.rs  transform.rs
src/vectors/: car_0.json  car_0.vec  data_schema.json  map_0.json  map_0.vec
