[package]
name = "rageriders"
version = "0.1.0"
edition = "2024"

[dependencies]
pollster = "0.4.0"
wgpu = { version = "28.0.0", features = ["metal"] }
winit = "0.30.12"
bytemuck = { version = "1.24", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert-json-diff = "2.0"